--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,3 @@
-<app-success-alert></app-success-alert>
-<app-warning-alert></app-warning-alert>
+<!-- <app-success-alert></app-success-alert>
+<app-warning-alert></app-warning-alert> -->
+<app-server></app-server>
