--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,4 @@
 <!-- <app-success-alert></app-success-alert>
 <app-warning-alert></app-warning-alert> -->
-<app-server></app-server>
+<!-- <app-server></app-server> -->
+<app-update-username></app-update-username>
