--- a/src/app/server/server.component.html
+++ b/src/app/server/server.component.html
@@ -5,7 +5,8 @@
             <input type="text" class="form-control" [(ngModel)]="serverName">
             <button class="btn btn-primary" [disabled]="!allowNewServer" (click)="updateServerStatus()">Add
                 Server</button>
-            <p>{{serverStatus}}</p>
+            <!-- <p>{{serverStatus}}</p> -->
+            <p *ngIf="serverCreated">server was created with name {{serverName}}</p>
         </div>
     </div>
 </div>
