added ngFor directive

--- a/src/app/server/server.component.html
+++ b/src/app/server/server.component.html
@@ -15,8 +15,7 @@
             }@else{
             <p>No server added</p>
             }
-            <app-servers></app-servers>
-            <app-servers></app-servers>
+            <app-servers *ngFor="let server of servers"></app-servers>
 
         </div>
     </div>
