--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,6 @@
 <!-- <app-success-alert></app-success-alert>
 <app-warning-alert></app-warning-alert> -->
-<app-server></app-server>
+<!-- <app-server></app-server> -->
 
 <!-- <app-update-username></app-update-username> -->
+<app-display-details></app-display-details>
